--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.10",
-    "@angular/cli": "~16.2.10",
+    "@angular/cli": "16.2.10",
     "@angular/compiler-cli": "^16.2.12",
     "@angular/localize": "^16.2.12",
     "@types/datatables.net": "^1.10.27",
